	old maximum was 0 (introduced in Bug #53578 fix)

2010-06-16	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#54330 Broken fast index creation

2010-06-10	The InnoDB Team

	* include/log0log.ic, row/row0ins.c, row/row0purge.c,
	row/row0uins.c, row/row0umod.c, row/row0upd.c:
	Fix Bug#39168 ERROR: the age of the last checkpoint ... exceeds
	the log group capacity

2010-06-08	The InnoDB Team

	* dict/dict0load.c:
	Fix Bug#54009 Server crashes when data is selected from non backed
	up table for InnoDB plugin

2010-06-02	The InnoDB Team

	* include/db0err.h, include/lock0lock.h, include/row0mysql.h,
	lock/lock0lock.c, row/row0ins.c, row/row0mysql.c, row/row0sel.c:
	Fix Bug#53674 InnoDB: Error: unlock row could not find a
	4 mode lock on the record

2010-06-01	The InnoDB Team

	* include/sync0rw.h, sync/sync0rw.c:
	Fix Bug#48197 Concurrent rw_lock_free may cause assertion failure

2010-06-01	The InnoDB Team

	* include/sync0rw.h, sync/sync0rw.c:
	Fix Bug#48197 Concurrent rw_lock_free may cause assertion failure

2010-06-01	The InnoDB Team

	* row/row0umod.c:
	Fix Bug#53812 assert row/row0umod.c line 660 in txn rollback
	after crash recovery

2010-05-24	The InnoDB Team

	* dict/dict0boot.c, dict/dict0crea.c, fil/fil0fil.c,
	include/dict0boot.h, include/fil0fil.h, row/row0mysql.c:
	Fix Bug#53578: assert on invalid page access, in fil_io()

2010-05-12	The InnoDB Team

	* handler/handler0alter.cc:
	Fix Bug#53591 crash with fast alter table and text/blob prefix
	primary key

2010-05-12	The InnoDB Team

	* handler/handler0alter.cc:
	Fix Bug#53591 crash with fast alter table and text/blob prefix
	primary key

2010-05-12	The InnoDB Team

	* row/row0merge.c:
	Fix Bug#53471 row_merge_drop_temp_indexes() refers freed memory, SEGVs

2010-05-11	The InnoDB Team

	* mysql-test/innodb_bug53290.test, mysql-test/innodb_bug53290.result,
	include/rem0cmp.h, rem/rem0cmp.c, row/row0merge.c:
	Fix Bug#53290 wrong duplicate key error when adding a unique index
	via fast alter table
